-> All saved variables (unitframes positions, arena tracker position, etc) are now saved per character instead of wow account.
-> Added an option to repair item with guild fund.
-> Vehicule button reskinned because default blizzard exit button sux.
-> Vehicule button moved into actionbar panel at right.
-> Chateditbox border is now colored according to the current channel used.
-> Weapons buffs is now displayed with buffs.
-> New grid layout, layout idea by elv22.
-> Friend list by class color.
-> quest level added in quest panel.
-> You can now track how many gold you have on each character via gold stat tooltip.
-> Middle click (mouse button 3) on minimap will now show a micro menu selector instead of calendar.
-> live hps meter stat added for healer.
-> new map, smaller and skinned.
-> sgrouploot removed, teksloot added and reskinned to look like tukui
-> /copy removed, added another script of copy chat. A button appear on mouseover on bottom right of chat windows. (credit shestak)
-> LDF icon added on group.
-> Added the ability to destroy totems by clicking/shift clicking on the totembar
-> Added auto-join to LFD because it boring as a DPS to miss the "accept" button to enter dungeon. (omg i'm too lazy)
-> raid id added to time tooltip and only raid id, we don't care about 5 mans instances. Idea by garangar, implemented by Haleth.
-> other undocumented changes.

t9.01
-> added power bar on dps party
-> threatbar is now only show in raid or party. (yes we don't care about this bar when solo)
-> FR localization fix. 
-> removed some useless option in tukui.config.lua that we don't need anymore.
-> fix player debuff when portrait is enabled.
-> fix player debuff on deathknight and shaman with totem bar or rune bar.
-> fix vehicule button and button #24.

t9.02
-> fix hps and dps stat when both are enabled.
-> fix auto repair not disabled when disabled in config file.

