@@ -1,7 +1,7 @@
 ## Interface: 30300
 ## Author: Tukz
-## Version: 9.02
-## Title: |cffC495DDTukui 9.02|r
+## Version: 9.03
+## Title: |cffC495DDTukui 9.03|r
 ## Notes: UI of awesomeness!
 ## SavedVariables: tgoldDB
 ## SavedVariablesPerCharacter: t9install, tCooldownTracker_Saved, bb08df87101dd7f2161e5b77cf750f753c58ef1b
@@ -48,6 +48,7 @@ mods\bags.lua
 mods\chattabs.lua
 mods\mirror.lua
 mods\map.lua
+mods\bind.lua
 
 
 
