@@ -339,6 +339,6 @@ anchor:SetScript("OnEvent", function(frame, event, addon)
 
 	anchor:SetScript("OnEvent", function(frame, event, ...) if event == "CHAT_MSG_LOOT" then return CHAT_MSG_LOOT(...) else return START_LOOT_ROLL(...) end end)
 
-	anchor:SetPoint("TOP", UIParent, "TOP", 0, -250)
+	anchor:SetPoint("CENTER", UIParent, "CENTER", 0, -200)
 end)
 
