@@ -212,6 +212,6 @@ ChatFontSize = 12						-- set the default fontsize of chat
 -------------------------------------------------------------------------------------------------------------------------------
 PixelPerfect = true           			-- enable pixel perfect on Tukui! Warning: if set false, tukui borders can look shitty!
 LoginMsg = true               			-- enable login msg of tukui
-AutoRepairGuildFund = true				-- ninja gold from guild bank for repair.
+AutoRepairGuildFund = false				-- ninja gold from guild bank for repair.
 
 
